--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 <div class="card">
     <div class="outside">
         <div class="front">
-            <p>Happy Birthday Baby❤</p>
+            <p>Happy Birthday Baby</p>
             <div class="cake">
                 <div class="top-layer"></div>
                 <div class="middle-layer"></div>
